# cpf_segmentation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/segmentation/: config.h  lsa_tr.h  segmentation.hpp  segmentation_helpers.h
src/: segmentation.cpp  segmentation_kinect_test.cpp  segmentation_test.cpp
